Corrected bulletins type 2 feature

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yambi_smis",
-  "homepage": "wima",
+  "homepage": "cirezi2",
   "version": "0.1.0",
   "private": false,
   "productName": "Yambi SMIS",
