--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "convertir-nombre-lettre": "^1.0.2",
     "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-charts": "^2.0.0-beta.7",
