--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yambi_smis",
-  "homepage": "wima",
-  "version": "8.4.2",
+  "homepage": "alfajiri",
+  "version": "8.4.2 Beta",
   "private": false,
   "app_full_name":"Yambi Class - School Management Information System - (SMIS)",
   "branch":"stable",
