--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yambi_smis",
-  "homepage": "/wima",
+  "homepage": "/cirezi2",
   "version": "8.4.2 Beta",
   "private": false,
   "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
