--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "productName": "Yambi Class SMIS",
   "main": "public/main.js",
   "dependencies": {
+    "@capacitor/android": "^4.6.2",
+    "@capacitor/cli": "^4.6.2",
+    "@capacitor/core": "^4.6.2",
+    "@capacitor/ios": "^4.6.2",
     "@electron/remote": "^2.0.9",
     "@material-ui/core": "^4.12.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -40,7 +44,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
-    "electron:build": "yarn build && electron-builder --linux -c.extraMetadata.main=build/main.js",
+    "electron:build": "yarn build && electron-builder --win -c.extraMetadata.main=build/main.js",
     "electron:start": "wait-on tcp:3000 && electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
