--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-scripts": "^5.0.1",
     "read-excel-file": "^5.2.25",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
