--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^14.2.1",
     "convertir-nombre-lettre": "^1.0.2",
     "electron-is-dev": "^2.0.0",
+    "electron-updater": "^5.3.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-charts": "^2.0.0-beta.7",
