--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@diagoriente/react-preview-a4": "^0.2.5",
     "@electron/remote": "^2.0.9",
     "@material-ui/core": "^4.12.1",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
