Added close Action to the dektop version on Siginin

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
   "branch": "stable",
-  "platform": "Desktop",
+  "platform": "Web",
   "productName": "Yambi Class SMIS",
   "main": "public/main.js",
   "dependencies": {
@@ -63,6 +63,7 @@
     "extends": null,
     "appId": "com.yambi.class",
     "linux": {
+      "icon": "logo.png",
       "target": [
         "deb",
         "snap",
