--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
   "branch": "stable",
-  "platform": "Web",
+  "platform": "Desktop",
   "productName": "Yambi Class SMIS",
   "main": "public/main.js",
   "dependencies": {
@@ -32,6 +32,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-calendar": "^4.2.1",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
