--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": ".",
   "name": "yambi-smis",
   "description": "School Management Information System",
-  "version": "8.5.0",
+  "version": "8.5.2",
   "private": true,
   "author": {
     "name": "Joan Migani",
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-calendar": "^4.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
