--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "axios": "^1.4.0",
     "convertir-nombre-lettre": "^1.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^5.3.0",
+    "fetch-progress": "^1.3.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.2.0",
