--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "version": "8.5.2",
   "private": true,
   "author": {
-    "name": "Joan Migani",
+    "name": "Yambi",
     "email": "joan.agisha@gmail.com"
   },
   "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
   "branch": "stable",
-  "platform": "Web",
+  "platform": "Desktop",
   "productName": "Yambi Class SMIS",
   "main": "public/main.js",
   "dependencies": {
@@ -41,7 +41,7 @@
     "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "read-excel-file": "^5.2.25",
     "redux": "^4.2.0",
