--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
   "branch": "stable",
-  "platform": "Desktop",
+  "platform": "Web",
   "productName": "Yambi Class SMIS",
   "main": "public/main.js",
   "dependencies": {
@@ -25,15 +25,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "convertir-nombre-lettre": "^1.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^5.3.0",
     "fetch-progress": "^1.3.0",
     "fs": "^0.0.1-security",
+    "jspdf": "^2.5.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "^2.0.0-beta.7",
@@ -49,7 +52,8 @@
     "redux-thunk": "^2.4.2",
     "sha1": "^1.1.1",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
