--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "name": "Yambi",
     "email": "joan.agisha@gmail.com"
   },
-  "app_full_name": "Yambi Class - School Management Information System - (SMIS)",
+  "app_full_name": "Yambi Class - School Management Information System - SMIS",
   "branch": "stable",
   "platform": "Web",
   "productName": "Yambi Class SMIS",
